tests/paczka1/small_fuzzy/46738940.err
Error in line 6: 8oJQFOm9tW A879 85,1
Error in line 3: BR379bNA A879 96,0
